--- a/AteaHomework/AzureFunction/AzureFunction.csproj
+++ b/AteaHomework/AzureFunction/AzureFunction.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.18" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Refit" Version="6.0.94" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -25,6 +26,6 @@
         </None>
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\StorageTools\StorageTools.csproj" />
+      <ProjectReference Include="..\StorageLibrary\StorageLibrary.csproj" />
     </ItemGroup>
 </Project>
