--- a/AteaHomework/StorageLibrary/StorageLibrary.csproj
+++ b/AteaHomework/StorageLibrary/StorageLibrary.csproj
@@ -10,6 +10,8 @@
       <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="2.0.0-preview" />
       <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
       <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Refit" Version="6.0.94" />
     </ItemGroup>
 
 </Project>
