--- a/AteaHomework/AzureFunction/AzureFunction.csproj
+++ b/AteaHomework/AzureFunction/AzureFunction.csproj
@@ -2,7 +2,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <AzureFunctionsVersion>V3</AzureFunctionsVersion>
+        <_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>
     </PropertyGroup>
+	
     <ItemGroup>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0-beta.2" />
         <PackageReference Include="Azure.Storage.Common" Version="12.9.0-beta.2" />
